# old-website

./: .eslintrc.json  .gitignore  .prettierrc.json  .stylelintrc.json  404.html  LICENSE  README.md  astro.config.ts  build.py  index.css  index.html  old.html  package-lock.json  package.json  pyproject.toml  scripts.py  tailwind.config.ts  tsconfig.json
.github/workflows/: build.yml  deploy.yaml
blog/: hello-world.html  index.html  introducing-objective-rust.html  my-journey-in-programming.html  objective-rust-nope.html  thoughts-on-go.html
boreDOM/docs/: globals.html  index.html  modules.html
boreDOM/docs/classes/: _component_.component.html  component.component-1.html
boreDOM/docs/interfaces/: _component_.__global.window.html
boreDOM/docs/modules/: _component_.__global.html  _component_.html  _dom_.html  _index_.html  component.html  dom.html  memoized.html
css/: base.css  custom.css  minimal.min.css  styles.css
js/: main.js  minimal.min.js
plan/: boilerplate.html  colorpalette.css  content_template.html  content_template.md  font-test.html
projects/: index.html
public/: index.html
public/blog/: hello-world.html  objective-rust-nope.html
scss/: base.scss  styles.scss
simplelight/: custom.css  custom.min.css  index.html  simplelight.min.css  simplelightv2.1_main.min.css  simplelightv2.1_responsive.min.css
src/: 404.html  _base.html  index.html  old.html
src/blog/: _base.html  hello-world.html  index.html  introducing-objective-rust.html  my-journey-in-programming.html  objective-rust-nope.html  thoughts-on-go.html
src/components/: Card.astro  DateTime.astro  Footer.astro  Head.astro  Header.astro  HeaderLink.astro  Nav.astro
src/content/: config.ts
src/content/blog/: a-brief-history.md  hello-world-again.md
src/layouts/: BaseLayout.astro  HeroPage.astro  Layout.astro  Page.astro
src/pages/: 404.astro  about.astro  blog.astro  egg.astro  index.astro  rss.xml.ts
src/styles/: base.css  global.css
(+10 files in other folders)
