[tool.poetry]
name = "hereiskevin.github.io"
version = "0.1.0"
description = "Kevin Feng's personal website and blog"
authors = ["Kevin Feng"]
license = "Proprietary"
packages = [{ include = "./build.py" }]

[tool.poetry.dependencies]
python = "^3.6"
Jinja2 = "^2.11.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.8.0"

[tool.poetry.scripts]
format = "scripts:format"
build = "scripts:build"
start = "scripts:start"

[tool.isort]
profile = "black"
line_length = 80

[tool.black]
line-length = 80

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
